--- a/index.html
+++ b/index.html
@@ -1,10 +1,62 @@
-# nur_akgunes
-COLORFUL DANCE
-echo "# nur_akgunes" >> README.md 
-git init 
-git ekle README.md 
-git commit -m "ilk commit" 
-git şube -M ana 
-git uzaktan kaynak ekle https://github.com/nursenaakgunes/nur_akgunes.git
- git push - sen asıl ana
-                
+<!doctype html>
+<html>
+ <head>
+ <meta charset="utf-8"/>
+ <title>COLORFUL DANCE</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <link href="tasarım.css" rel="stylesheet">
+
+</head>
+
+<body>
+  <div class="menu"></div>
+  <div class="logo"></div>
+  <div class="header">
+    <header>COLORFUL DANCE</header>
+  </div>
+
+<div class="first"></div>
+<div class="second"></div>
+<div class="third"></div>
+
+<table border="2" width= 100% height= 100%  align="center">
+  <tr>
+    <td colspan="5" align="center" width= 100 height= 100% > <img src="img/logo3.png" alt="logo" div class="resim1"></td>
+  </tr>
+  
+    <td colspan="5" align="center" width= 100 height= 100% >
+   <tr div class="menu">  
+     <th><a href ="index.html" target="_self" title="Anasayfa"> Anasayfa</a></th>
+     <th><a href ="hizmetlerimiz.html"target="_self" title="Hizmetlerimiz">Hizmetlerimiz</a></th>
+     <th><a href="kurumsal.html"target="_self" title="Kurumsal">Kurumsal</a></th>
+     <th><a href="kariyer.html"target="_self" title="Kariyer">Kariyer</a></th>
+     <th><a href ="iletişim.html"target="_self" title="İletişim">İletişim</a></th>
+    </div>
+</tr>
+ </td> 
+
+   <td div class="second" colspan="5" height="600" width=100% align="center">
+    <table border="10"  width= 100% height= 80% align="center">
+      <tr>
+        <td> <img src="img/çift.jpg" alt="arkaplan" div class="resim2"></div>
+             <p><h2><i>COLORFUL DANCE</i></h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nihil atque explicabo cum aliquid neque voluptas, culpa itaque repellat nesciunt. Esse suscipit odit eum nemo, magnam soluta officia labore ipsam molestiae, et assumenda sapiente laborum ipsum omnis recusandae, nobis voluptatum doloremque sit excepturi. Quisquam, voluptatem sit! Et fuga sint aut.</p>
+             <p><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus similique mollitia qui corrupti provident velit nihil eum delectus autem quas inventore tempore vitae nulla, quam ab sequi numquam repellat voluptate suscipit, quia natus? Officia, quod?</p>           
+            </td> 
+            </tr>
+            </table> 
+          </div>
+        </td>
+      </table>
+<footer>
+  <ul><div class="sosyal"> Tüm Hakları Saklıdır. Copyright &copy: |2020<br>
+    <li><a href="https://tr-tr.facebook.com/" target="_blank"><img src="img/facebook.png" title="Facebook" alt="Facebook" ></a>
+        <a href="https://twitter.com/login?lang=tr" target="_blank"><img src="img/twitter.png" title="Twitter" alt="Twitter" ></a>
+        <a href="https://www.instagram.com/?hl=tr" target="_blank"><img src="img/instagram.png" title="İnstagram" alt="İnstagram"></a>
+        <a href="https://tr.linkedin.com/" target="_blank"><img src="img/linkedin.png" title="Linkedin" alt="Linkedin"></a>
+    </li>
+  </ul>
+</div>
+</footer>
+  
+</body>
+</html>
